<resources>
    <string name="app_name">EmpresaApp</string>
    <string name="Welcome">Bienvenido</string>
    <string name="password">contraseña</string>
    <string name="login">Login</string>
    <string name="registrar">Registrarse</string>
    <string name="registro">Por favor, rellene los siguientes datos:</string>
    <string name="crea_cuenta">Crea tu \n   Cuenta</string>
    <string name="crea_cuenta_btn">Crear cuenta</string>
    <string name="email">email</string>
    <string name="NIF">NIF</string>
    <string name="nombre"> nombre</string>
    <string name="apellido1">apellido 1</string>
    <string name="apellido2">apellido 2</string>
    <string name="teléfono">teléfono</string>
    <string name="vacaciones">Vacaciones</string>
    <string name="turnos">Turnos</string>
    <string name="fichajes">Fichajes</string>
    <string name="Hola">Hola, %1$s </string>
    <string name="NombreUsuario">%1$s %2$s</string>
    <string name="Solicitar_Vacaciones">Solicitar vacaciones</string>
    <string name="Seleccione_la_fecha_de_sus_vacaciones">Seleccione la fecha de sus vacaciones</string>
    <string name="Consultar_vacaciones">Consultar vacaciones</string>
    <string name="Consulte_el_periodo_seleccionado">Consulte el periodo seleccionado</string>
    <string name="Consultar_solicitud">Consultar solicitud</string>
    <string name="Consulte_el_estado_de_su_solicitud">Consulte el estado de su solicitud</string>
    <string name="Volver">Volver</string>
    <string name="Volver_a_la_pantalla_principal">Volver a la pantalla anterior</string>
    <string name="disfrutar_vacaciones">¿Disfrutará sus vacaciones en dos periodos?</string>
    <string name="Fecha_inicio">Fecha inicio</string>
    <string name="Fecha_fin">Fecha fin</string>
    <string name="Enviar">Enviar</string>
    <string name="Periodo_1">Periodo 1</string>
    <string name="Periodo_2">Periodo 2</string>
    <string name="si">Sí</string>
    <string name="no">No</string>
    <string name="info">Info</string>
    <string name="administrar">Administrar</string>
    <string name="gestionar_vacaciones">Gestionar vacaciones</string>
    <string name="administrar_turnos">Administrar turnos</string>
    <string name="control_horario">Control horario</string>
    <string name="gestione_vacaciones">Gestione las vacaciones de los empleados</string>
    <string name="administre_turnos">Gestione los turnos de los empleados</string>
    <string name="gestion_horarios">Control de los horarios de los empleados</string>
    <string name="gestion_solicitudes">Gestión de solicitudes</string>
    <string name="aceptar_rechazar">Aceptar o rechazar solicitudes</string>
    <string name="listar_solicitudes">Listar solicitudes</string>
    <string name="listar_solicitudes_aceptadas">Ver las solicitudes aceptadas</string>
    <string name="texto_pantalla_supervisor">Propuestas pendientes de revisar</string>
    <string name="seleccione_trabajador">Seleccione un empleado</string>
    <string name="escanear_codigo">Escanear código QR</string>
    <string name="escanee_codigo">Escaneé el código QR</string>
    <string name="listar_fichajes">Listar fichajes</string>
    <string name="registro_fichajes">Registro de sus últimos fichajes</string>
    <string name="aceptar">aceptar</string>
    <string name="denegar">denegar</string>
    <string name="salir">Salir</string>
    <string name="solicitudes_aceptadas">Solicitudes aceptadas</string>
    <string name="vacaciones_solicitadas">Vacaciones solicitadas</string>
    <string name="vacaciones_concedidas">Vacaciones concedidas</string>
    <string name="no_solicitado">No solicitado</string>
    <string name="primer_periodo">Primer periodo</string>
    <string name="segundo_periodo">Segundo periodo</string>
    <string name="propuestas_pendientes_de_revisar">Propuestas pendientes de revisar</string>
    <string name="asignar_turnos">Asignar Turnos</string>
    <string name="asignar_turnos_empleados">Asigne los turnos de los empleados</string>
    <string name="modificar_turnos">Modificar Turnos</string>
    <string name="modificar_turnos_empleados">Modifique los turnos de los empleados</string>
    <string name="ver_turnos">Ver Turnos</string>
    <string name="ver_turnos_empleados">Vea y modifique los turnos asignados</string>
    <string name="seleccione_empleado">Seleccione un empleado</string>
    <string name="fecha_turno">Seleccione la fecha</string>
    <string name="asignar_turno">Asignar turno</string>
    <string name="ver_anio">Seleccione el año</string>
    <string name="ver_mes">Seleccione el mes</string>
    <string name="modificar_turno">Modificar turno</string>
    <string name="ver_turno">Ver turno</string>
    <string name="dias_asignados">Día/s asignado/s</string>
    <string name="mostrar">Mostrar</string>
    <string name="borrar_dia">¿ Borrar el día seleccionado ?</string>
    <string name="cambiar_turno">¿ Solicitar a un compañero cambiar el turno ?</string>
    <string name="seleccione_companeiro">Seleccione a un compañero</string>
    <string name="enviar_email">Enviar email</string>
    <string name="info_contacto">Información de contacto</string>
    <string name="listado_turnos">Listado de turnos asignados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
