<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cambiar_turno"
            android:textColor="@color/azul"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnSi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:text="@string/si"
                android:layout_gravity="center"
                android:textColor="@color/whitecolor" />

            <Button
                android:id="@+id/btnNo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/no"
                android:textColor="@color/whitecolor" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
