<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activitys.PrincipalActivity">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="volver"
            android:src="@drawable/ic_arrow_back_blue_24dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="salir"
            android:layout_marginStart="150dp"
            android:src="@drawable/ic_exit_to_app_blue_24dp"/>

        <TextView
            android:id="@+id/tvNombreTrabajador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text=""
            android:textColor="@color/blackcolor"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/user">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_assignment_blue_24dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnVacaciones"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_principal"
            android:text="@string/vacaciones"
            android:textAllCaps="false"
            android:textColor="@color/azul" />

        <Button
            android:id="@+id/btnTurnos"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_principal"
            android:text="@string/turnos"
            android:textAllCaps="false"
            android:textColor="@color/azul" />

        <Button
            android:id="@+id/btnFichajes"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_principal"
            android:text="@string/fichajes"
            android:textAllCaps="false"
            android:textColor="@color/azul" />

        <Button
            android:id="@+id/btnInfo"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_principal"
            android:text="@string/info"
            android:textAllCaps="false"
            android:textColor="@color/azul" />

        <Button
            android:id="@+id/btnAdministrar"
            android:text="@string/administrar"
            android:background="@drawable/btn"
            android:layout_width="280dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:visibility="gone"
            android:textColor="@color/whitecolor"
            />

    </LinearLayout>

</LinearLayout>