<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activitys.TurnoTrabajadorActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="volver"
            android:src="@drawable/ic_arrow_back_blue_24dp" />

        <TextView
            android:id="@+id/tvNombreTrabajador_VerTurnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text=""
            android:textColor="@color/blackcolor"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAnio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ver_anio"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/tvMes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/ver_mes"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <Button
            android:id="@+id/btnVerDias"
            android:layout_width="180dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn"
            android:text="@string/mostrar"
            android:textAllCaps="false"
            android:textColor="@color/whitecolor">

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/dias_asignados"
            android:textColor="@color/azul"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <ListView
            android:id="@+id/lvDias"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>


    </LinearLayout>

</LinearLayout>