<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AsignarTurnosActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="volver"
            android:src="@drawable/ic_arrow_back_blue_24dp" />

        <TextView
            android:id="@+id/tvNombreTrabajador_AsignarTurnos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text=""
            android:textColor="@color/blackcolor"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/azul"
            android:text="@string/seleccione_empleado">
        </TextView>

        <Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/spTrabajadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </Spinner>

        <TextView
            android:id="@+id/tvFechaTurno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textStyle="bold"
            android:hint="@string/fecha_turno" />

        <Button
            android:id="@+id/btnAsignarTurnos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn"
            android:textColor="@color/whitecolor"
            android:text="@string/asignar_turno">

        </Button>

    </LinearLayout>

</LinearLayout>