<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activitys.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="signup"
            android:src="@drawable/ic_arrow_forward_black_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:onClick="signup"
            android:text="@string/registrar"
            android:textColor="@color/blackcolor"
            android:textSize="15sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-medium"
                android:text="@string/login"
                android:textColor="@color/blackcolor"
                android:textSize="25sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/user">

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/ic_face_blue_24dp" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edt_login"
                android:elevation="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp" />

            <EditText
                android:id="@+id/txtContraseña"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/edt_login"
                android:elevation="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="280dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/whitecolor" />

            <ProgressBar
                android:layout_marginTop="5dp"
                android:id="@+id/loginProgressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>